# thesis

./: .env  .envrc  .gitattributes  .gitignore  .gnuplot  .upnext  PRISM  README.md  UPNEXT.md  pyproject.toml  requirements.txt  requirements_backup.txt
.github/workflows/: pages.yml
data/EGIFA/: .gitignore  README  README.md  dump_gci_indices.m  extract_gcis.m  high_pass.m  inverse_filter9.m  low_pass.m  matlab_python_test.m  parse_vtl_name.m  projParam.m  python_matlab_test.py  run_all_methods.m  score_vtl12.m  score_vtl_continuous1.m  scores_summary.txt  test.ipynb  test_vtl3.m
experiments/: jcache_times.py  run.py  time.py
experiments/gfm/: README.md  code.ipynb  code.py  config.py  generate_data.py  stats.R  tmuxbufferdump.txt
experiments/gfm_modal/: README.md  code.ipynb  stats.R
experiments/gfm_modal_amp_noise/: README.md  code.ipynb  config.py  stats.R
experiments/iklp/: stats.R
experiments/iklp-openglot/: code.ipynb  config.py
experiments/iklp-openglot-I-cpu-batchsize/: analysis.R  code.ipynb
experiments/iklp-openglot-I-notes/: code.ipynb
experiments/iklp-openglot-I-test/: code.ipynb  config.py
experiments/iklp-openglot-II/: code.ipynb
experiments/kernel_identification/: README.md  code.ipynb  code.py  config.py  source-only.ipynb  waterfall.ipynb
experiments/pack/: README.md  code.ipynb  code.py  config.py  stats.R
experiments/pack_fs/: README.md  code.ipynb  config.py  stats.R
experiments/pack_lf/: README.md  code.ipynb  config.py
experiments/pack_modal/: README.md  code.ipynb  code.py  config.py  stats.R
experiments/pack_refine/: README.md  code.ipynb  code.py  config.py  stats.R
experiments/pmatern_lf/: README.md  code.py  config.py
experiments/pmatern_modal/: README.md  config.py  stats.R
experiments/relaxation/: README.md  code.ipynb  code.py  config.py  kernel_died_test.py  stats.R
experiments/relaxation_centered/: README.md  code.ipynb  config.py  stats.R
experiments/source_noise/: README.md  code.py  code_matern.py  code_openglot_II.py  code_openglot_II_ar_prior.py
experiments/test/: code.ipynb  code.py  config.py
manuscript/: .gitignore  library.bib  meta.tex  options.tex  thesis.tex  user.tex
manuscript/cls/: PhDThesisPSnPDF.cls
manuscript/tex/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex  7.tex  a3.tex  conventions.tex  definitions.tex  notation.tex  scratch.tex
notebooks/: lf.gp  lf.py  parametric-dgf.py  wolfram_test.ipynb
notebooks/aplawd/: discover.py  explore.py  groups.py  t0.py
notebooks/ar/: pacf.md
notebooks/commonvoice/: explore.py  lbgid.py  run.py  smooth.py
notebooks/egifa/: chien.py  discover.py  explore.py  gci.py  lbgid.py  run.ipynb  run.py  segment.py  smooth.py  voiced.py
notebooks/gfm/: blind_demo.py  closure_constraint.py  du.gp  lf_modal.py  (+1 more)
scrap/: .gitignore  ar.tex  beta.tex  chien.md  databases.md  mercer_scaling.md  noise.md  soft-divisibility.md
script/: ipynb  pdfplotly  readplotly
scripts/: ipynb-clean.sh  setup-git.sh  vsnb-clean.sh
tests/: gig.ipynb  test_gig.ipynb  test_jax_config.py
(+408 files in other folders)
