[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "bngif"
version         = "0.0.1"
description     = "Bayesian nonparametric glottal inverse filtering"
requires-python = ">=3.10"

# Modules will be installed with `pip install -e .`
dependencies = [
    "jax>=0.6",
    "jaxopt>=0.8.5",
    "cola-ml>=0.0.7",
    "gpjax>=0.11.0",
    "distrax>=0.1.5",
    "gnuplotlib>=0.42",
    "setuptools>=68",
    "pytest>=8.3.5",
    "nbmake>=1.5.5",
    "nbstripout>=0.8.1",
    "joblib>=1.5.1",
    "soundfile>=0.13.1",
    "papermill>=2.6.0",
    "scrapbook>=0.5.0",
    "jupyter_cache>=1.0.1",
    "mpmath>=1.3.0",
]

# [project.optional-dependencies.dev]
# contents = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--nbmake"]