[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "bngif"
version         = "0.0.1"
description     = "Bayesian nonparametric glottal inverse filtering"
requires-python = ">=3.10"

# Modules will be installed with `pip install -e .`
dependencies = [
    "matplotlib==3.10.6", # pinned because we pickle plot objects (see next line)
    "dill==0.4.0",
    "jax>=0.6",
    "jaxopt>=0.8.5",
    "distrax>=0.1.5",
    "setuptools>=68",
    "pytest>=8.3.5",
    "nbmake>=1.5.5",
    "nbstripout>=0.8.1",
    "joblib>=1.5.1",
    "soundfile>=0.13.1",
    "papermill>=2.6.0",
    "scrapbook>=0.5.0",
    "jupyter_cache>=1.0.1",
    "mpmath>=1.3.0",
    "sympy>=1.14.0",
    "tinygp>=0.3.0",
    "dynesty>=2.1.5",
    "tqdm>=4.67.1",
]

# [project.optional-dependencies.dev]
# contents = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]